--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TypeScript Tutorial</title>
   <link rel="stylesheet" href="./style.css">
-  <script text="javascript" href="./sandbox.js"></script>
+  
 </head>
 <body>
 
@@ -45,5 +45,6 @@
   </footer>
 
   <script src='sandbox.js'></script>
+  <script src="array.js"></script>
 </body>
 </html>
