--- a/index.html
+++ b/index.html
@@ -46,5 +46,6 @@
 
   <script src='sandbox.js'></script>
   <script src="array.js"></script>
+  <script src="tupples.js"></script>
 </body>
 </html>
