--- a/index.html
+++ b/index.html
@@ -47,5 +47,6 @@
   <script src='sandbox.js'></script>
   <script src="array.js"></script>
   <script src="tupples.js"></script>
+  <script src="union.js"></script>
 </body>
 </html>
