--- a/index.html
+++ b/index.html
@@ -48,5 +48,7 @@
   <script src="array.js"></script>
   <script src="tupples.js"></script>
   <script src="union.js"></script>
+  <script src="interface.js"></script>
+  <script src="unioninterface.js"></script>
 </body>
 </html>
