--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
   <script src="array.js"></script>
   <script src="tupples.js"></script>
   <script src="union.js"></script>
-  <script src="interface.js"></script>
+  <script src="interface.js"></script>  
+  <script src="interfaceinheritance.js"></script>
   <script src="unioninterface.js"></script>
 </body>
 </html>
