--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
   <script src="union.js"></script>
   <script src="interface.js"></script>  
   <script src="interfaceinheritance.js"></script>
+  <script src="classexamp.js"></script>
   <script src="unioninterface.js"></script>
 </body>
 </html>
