--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
   <script src="interface.js"></script>  
   <script src="interfaceinheritance.js"></script>
   <script src="classexamp.js"></script>
+  <script src="classinheritance.js"></script>
   <script src="unioninterface.js"></script>
 </body>
 </html>
