--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
   <script src="interfaceinheritance.js"></script>
   <script src="classexamp.js"></script>
   <script src="classinheritance.js"></script>
+  <script src="static.js"></script>
   <script src="unioninterface.js"></script>
 </body>
 </html>
