--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
   <script src="classexamp.js"></script>
   <script src="classinheritance.js"></script>
   <script src="static.js"></script>
+  <script src="classinterface.js"></script>
   <script src="unioninterface.js"></script>
 </body>
 </html>
